Code - Work in progress

--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/authentication.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/authentication.html.twig
@@ -1,1 +1,1 @@
-{{-render(controller("UebusaitoBundle:Authentication:index", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+{{-render(controller("UebusaitoBundle:Authentication:authentication", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
