--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/menu_root.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/menu_root.html.twig
@@ -1,1 +1,1 @@
-{{-render(controller("UebusaitoBundle:Menu:index", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+{{-render(controller("UebusaitoBundle:Menu:menuRoot", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
