--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/page.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/page.html.twig
@@ -1,1 +1,1 @@
-{{-render(controller("UebusaitoBundle:PageLogic:index", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+{{-render(controller("UebusaitoBundle:PageLogic:pageLogic", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
