--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/language_page.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/language_page.html.twig
@@ -4,7 +4,7 @@
             <img id="language_flag_{{value.code}}" class="language_page_flag" src="{{asset("bundles/uebusaito/images/templates/" ~ response.settings['template'] ~ "/lang/" ~ value.code ~ ".png")}}" alt="{{value.code}}.png"/>
         {% endfor %}
     </div>
-    <form id="form_language_page" action="{{path("language_page", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+    <form id="form_language_page" action="{{path("language_page", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
         {{form_row(form.codePage)}}
 
         {{form_widget(form._token)}}
