--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/menu_root.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/menu_root.html.twig
@@ -25,7 +25,7 @@
                             <i class="fa fa-user fa-lg"></i>
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
-                            {{-render(controller("UebusaitoBundle:Authentication:index", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+                            {{-render(controller("UebusaitoBundle:Authentication:authentication", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
                         </div>
                     </div>
                 </div>
