--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/search_words.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/search_words.html.twig
@@ -11,7 +11,7 @@
     {% form_theme form "bootstrap_3_layout.html.twig" %}
 
     <div class="search_container">
-        <form id="form_search_words" class="form_search_words display_inline" action="{{path("search_words", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+        <form id="form_search_words" class="form_search_words display_inline" action="{{path("search_words", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             <div class="form_search_words_button search_input">
                 <i class="fa fa-search"></i>
             </div>
