--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_creation.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_creation.html.twig
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-12">
         <h3>{% trans %}page_creation_1{% endtrans %}</h3>
-        <form id="form_cp_page_creation" action="{{path("cp_page_creation", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+        <form id="form_cp_page_creation" action="{{path("cp_page_creation", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_row(form.parent, {'label': "page_creation_2"})}}
             
             <div class="form-group">
