--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/pages_selection.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/pages_selection.html.twig
@@ -11,7 +11,7 @@
 
     <div class="row">
         <div class="col-md-5">
-            <form id="form_cp_pages_selection" action="{{path("cp_pages_selection", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+            <form id="form_cp_pages_selection" action="{{path("cp_pages_selection", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
                 {{form_row(form.id, {'label': "pages_selection_2"})}}
 
                 {{form_widget(form._token)}}
