--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payments_user_selection.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payments_user_selection.html.twig
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-5">
         <h3>{% trans %}payments_user_selection_1{% endtrans %}</h3>
-        <form id="form_cp_payments_user_selection" action="{{path("cp_payments_user_selection", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+        <form id="form_cp_payments_user_selection" action="{{path("cp_payments_user_selection", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_row(form.userId, {'label': "payments_user_selection_2"})}}
 
             {{form_widget(form._token)}}
