--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_password.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_password.html.twig
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-5">
         <h3>{% trans %}profile_password_1{% endtrans %}</h3>
-        <form id="form_cp_profile_password" action="{{path("cp_profile_password", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+        <form id="form_cp_profile_password" action="{{path("cp_profile_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             <fieldset class="accordion_container">
                 <legend class="title"><i class="fa fa-chevron-circle-down icon"></i> {% trans %}profile_password_2{% endtrans %}</legend>
                 <div class="content">
