--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/role_creation.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/role_creation.html.twig
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-5">
         <h3>{% trans %}role_creation_1{% endtrans %}</h3>
-        <form id="form_cp_role_creation" action="{{path("cp_role_creation", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+        <form id="form_cp_role_creation" action="{{path("cp_role_creation", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             <div class="form-group">
                 {{form_label(form.level, "role_creation_2")}}
                 <div class="input-group">
