--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -30,7 +30,7 @@
             <p class="logo_desktop display_desktop">{{websiteName}}</p>
             <div class="sortable_column">
                 {% for value in response.modules.header %}
-                    {% if value.active == true and file_exists(response.path.bundle ~ "/Resources/views/module/" ~ value.file_name) %}
+                    {% if value.active == true and file_exists(response.path.bundleFull ~ "/Resources/views/module/" ~ value.file_name) %}
                         {{-include("UebusaitoBundle::module/" ~ value.file_name)-}}
                     {% endif %}
                 {% endfor %}
@@ -43,7 +43,7 @@
     {% if (settings['active'] == true or is_granted("IS_AUTHENTICATED_FULLY") == true) and urlExtra != "authentication_maintenance" %}
         <div class="sortable_column">
             {% for value in response.modules.left %}
-                {% if value.active == true and file_exists(response.path.bundle ~ "/Resources/views/module/" ~ value.file_name) %}
+                {% if value.active == true and file_exists(response.path.bundleFull ~ "/Resources/views/module/" ~ value.file_name) %}
                     {{-include("UebusaitoBundle::module/" ~ value.file_name)-}}
                 {% endif %}
             {% endfor %}
@@ -57,7 +57,7 @@
         
         <div class="sortable_column">
             {% for value in response.modules.center %}
-                {% if value.active == true and file_exists(response.path.bundle ~ "/Resources/views/module/" ~ value.file_name) %}
+                {% if value.active == true and file_exists(response.path.bundleFull ~ "/Resources/views/module/" ~ value.file_name) %}
                     {{-include("UebusaitoBundle::module/" ~ value.file_name)-}}
                 {% endif %}
             {% endfor %}
@@ -69,12 +69,12 @@
             {% if settings['active'] == false %}
                 {% if urlExtra == "authentication_maintenance" %}
                     <div class="sortable_column">
-                        {{-render(controller("UebusaitoBundle:Authentication:index", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+                        {{-render(controller("UebusaitoBundle:Authentication:authentication", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
                     </div>
                 {% else %}
                     <div class="sortable_column">
                         <div class="message_single_page horizontal_center">
-                            <a href="{{path("index", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': "authentication_maintenance"})}}"><i class="fa fa-wrench"></i></a>
+                            <a href="{{path("index", {'_locale': settings['language'], 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': "authentication_maintenance"})}}"><i class="fa fa-wrench"></i></a>
                             <p>{% trans %}index_1{% endtrans %}</p>
                             <p>{% trans %}index_2{% endtrans %}</p>
                         </div>
@@ -89,7 +89,7 @@
     {% if (settings['active'] == true or is_granted("IS_AUTHENTICATED_FULLY") == true) and urlExtra != "authentication_maintenance" %}
         <div class="sortable_column">
             {% for value in response.modules.right %}
-                {% if value.active == true and file_exists(response.path.bundle ~ "/Resources/views/module/" ~ value.file_name) %}
+                {% if value.active == true and file_exists(response.path.bundleFull ~ "/Resources/views/module/" ~ value.file_name) %}
                     {{-include("UebusaitoBundle::module/" ~ value.file_name)-}}
                 {% endif %}
             {% endfor %}
@@ -100,7 +100,7 @@
 {% block footerContainer %}
     {% if (settings['active'] == true or is_granted("IS_AUTHENTICATED_FULLY") == true) and urlExtra != "authentication_maintenance" %}
         {% for value in response.modules.footer %}
-            {% if value.active == true and file_exists(response.path.bundle ~ "/Resources/views/module/" ~ value.file_name) %}
+            {% if value.active == true and file_exists(response.path.bundleFull ~ "/Resources/views/module/" ~ value.file_name) %}
                 {{-include("UebusaitoBundle::module/" ~ value.file_name)-}}
             {% endif %}
         {% endfor %}
@@ -118,54 +118,54 @@
         };
         
         var path = {
-            'documentRoot': "{{response.path.documentRoot}}",
             'root': "{{response.path.root}}",
+            'documentRoot': "{{response.path.documentRoot}}",
             'rootFull': "{{response.path.rootFull}}",
-            'bundle': "{{response.path.bundle}}"
+            'bundleFull': "{{response.path.bundleFull}}"
         };
         
         var url = {
             'root': "{{response.url.root}}",
-            'public': "{{response.url.public}}",
-            'view': "{{response.url.view}}",
+            'bundle': "{{response.url.bundle}}",
+            'rootFull': "{{response.url.rootFull}}",
             'error': "{{path("error")}}",
-            'index': "{{path("index", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'languageText': "{{path("language_text", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'languagePage': "{{path("language_page", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'searchWords': "{{path("search_words", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'searchResult': "{{path("search_result", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'registration': "{{path("registration", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'recoverPassword': "{{path("recover_password", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'authenticationEnterCheck': "{{path("authentication_enter_check", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'authenticationExitCheck': "{{path("authentication_exit_check", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpProfile': "{{path("cp_profile", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpProfilePassword': "{{path("cp_profile_password", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpProfileCredits': "{{path("cp_profile_credits", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpProfileCreditsPayPal': "{{path("cp_profile_credits_payPal", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpPaymentsUserSelection': "{{path("cp_payments_user_selection", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpPaymentsSelection': "{{path("cp_payments_selection", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpPaymentProfile': "{{path("cp_payment_profile", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpPaymentDeletion': "{{path("cp_payment_deletion", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpPageCreation': "{{path("cp_page_creation", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpPagesSelection': "{{path("cp_pages_selection", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpPageProfile': "{{path("cp_page_profile", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpPageDeletion': "{{path("cp_page_deletion", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpUserCreation': "{{path("cp_user_creation", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpUsersSelection': "{{path("cp_users_selection", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpUserProfile': "{{path("cp_user_profile", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpUserDeletion': "{{path("cp_user_deletion", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpModulesDrag': "{{path("cp_modules_drag", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpModuleCreation': "{{path("cp_module_creation", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpModulesSelection': "{{path("cp_modules_selection", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpModuleProfile': "{{path("cp_module_profile", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpModuleProfileSort': "{{path("cp_module_profile_sort", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpModuleDeletion': "{{path("cp_module_deletion", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpRoleCreation': "{{path("cp_role_creation", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpRolesSelection': "{{path("cp_roles_selection", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpRoleProfile': "{{path("cp_role_profile", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpRoleDeletion': "{{path("cp_role_deletion", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpSettingsModify': "{{path("cp_settings_modify", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
-            'cpSettingsLanguageManage': "{{path("cp_settings_language_manage", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}"
+            'index': "{{path("index", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'languageText': "{{path("language_text", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'languagePage': "{{path("language_page", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'searchWords': "{{path("search_words", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'searchResult': "{{path("search_result", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'registration': "{{path("registration", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'recoverPassword': "{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'authenticationEnterCheck': "{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'authenticationExitCheck': "{{path("authentication_exit_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpProfile': "{{path("cp_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpProfilePassword': "{{path("cp_profile_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpProfileCredits': "{{path("cp_profile_credits", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpProfileCreditsPayPal': "{{path("cp_profile_credits_payPal", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpPaymentsUserSelection': "{{path("cp_payments_user_selection", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpPaymentsSelection': "{{path("cp_payments_selection", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpPaymentProfile': "{{path("cp_payment_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpPaymentDeletion': "{{path("cp_payment_deletion", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpPageCreation': "{{path("cp_page_creation", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpPagesSelection': "{{path("cp_pages_selection", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpPageProfile': "{{path("cp_page_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpPageDeletion': "{{path("cp_page_deletion", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpUserCreation': "{{path("cp_user_creation", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpUsersSelection': "{{path("cp_users_selection", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpUserProfile': "{{path("cp_user_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpUserDeletion': "{{path("cp_user_deletion", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpModulesDrag': "{{path("cp_modules_drag", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpModuleCreation': "{{path("cp_module_creation", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpModulesSelection': "{{path("cp_modules_selection", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpModuleProfile': "{{path("cp_module_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpModuleProfileSort': "{{path("cp_module_profile_sort", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpModuleDeletion': "{{path("cp_module_deletion", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpRoleCreation': "{{path("cp_role_creation", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpRolesSelection': "{{path("cp_roles_selection", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpRoleProfile': "{{path("cp_role_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpRoleDeletion': "{{path("cp_role_deletion", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpSettingsModify': "{{path("cp_settings_modify", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpSettingsLanguageManage': "{{path("cp_settings_language_manage", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}"
         };
         
         var text = {
@@ -193,6 +193,7 @@
             'maxWidth': "992px",
             'minWidth': "992px",
             'template': "{{settings['template']}}",
+            'language': "{{settings['language']}}",
             'active': "{{settings['active']}}"
         };
     </script>
