--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
@@ -27,13 +27,13 @@
             <p class="margin_clear">{{response.values.user.dateLastLogin|date("date.day"|trans)}} <b>[</b>{{response.values.user.dateLastLogin|date("date.time"|trans)}}<b>]</b></p>
             
             <div class="margin_top horizontal_center">
-                <a class="btn btn-primary btn-block" href="{{path("index", {'urlCurrentPageId': 1, 'urlExtra': "cp_profile"})}}">{% trans %}authentication_4{% endtrans %}</a>
-                <a class="btn btn-primary btn-block logout_button" href="{{path("authentication_exit_check", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}">{% trans %}authentication_5{% endtrans %}</a>
+                <a class="btn btn-primary btn-block" href="{{path("index", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "cp_profile"})}}">{% trans %}authentication_4{% endtrans %}</a>
+                <a class="btn btn-primary btn-block logout_button" href="{{path("authentication_exit_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}">{% trans %}authentication_5{% endtrans %}</a>
             </div>
         {% else %}
             {% form_theme form "bootstrap_3_layout.html.twig" %}
 
-            <form class="form_user_authentication" action="{{path("authentication_enter_check", {'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+            <form class="form_user_authentication" action="{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
                 {{form_row(form._username, {'label': "authentication_6"})}}
                 {{form_row(form._password, {'label': "authentication_7"})}}
                 
@@ -50,8 +50,8 @@
             </form>
             
             <div class="horizontal_center">
-                <a class="btn btn-primary btn-block" href="{{path("index", {'urlCurrentPageId': 3})}}">{% trans %}authentication_10{% endtrans %}</a>
-                <a class="btn btn-primary btn-block" href="{{path("index", {'urlCurrentPageId': 4})}}">{% trans %}authentication_11{% endtrans %}</a>
+                <a class="btn btn-primary btn-block" href="{{path("index", {'_locale': urlLocale, 'urlCurrentPageId': 3})}}">{% trans %}authentication_10{% endtrans %}</a>
+                <a class="btn btn-primary btn-block" href="{{path("index", {'_locale': urlLocale, 'urlCurrentPageId': 4})}}">{% trans %}authentication_11{% endtrans %}</a>
             </div>
         {% endif %}
     </div>
