--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/basic.scss
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/basic.scss
@@ -508,6 +508,11 @@ body {
     display: inline-block !important;
 }
 
+.avatar {
+    width: 100px;
+    height: 100px;
+}
+
 .jqte {
     margin: 0 !important;
 }
