--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -141,6 +141,7 @@
             'cpProfilePassword': "{{path("cp_profile_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'cpProfileCredits': "{{path("cp_profile_credits", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'cpProfileCreditsPayPal': "{{path("cp_profile_credits_payPal", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+            'cpProfileUpload': "{{path("cp_profile_upload", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'cpPaymentsUserSelection': "{{path("cp_payments_user_selection", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'cpPaymentsSelection': "{{path("cp_payments_selection", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
             'cpPaymentProfile': "{{path("cp_payment_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
@@ -211,6 +212,7 @@
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/FlashBag.js")}}"></script>
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/PopupEasy.js")}}"></script>
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/Table.js")}}"></script>
+    <script type="text/javascript" src="{{asset("bundles/uebusaito/js/Upload.js")}}"></script>
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/Captcha.js")}}"></script>
     
     <script type="text/javascript" src="{{asset("bundles/uebusaito/js/Language.js")}}"></script>
