--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/utility.css
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/utility.css
@@ -129,4 +129,9 @@ legend { width: inherit; padding: 0 10px; border-bottom: none; }
 #flashBag_popup ul { margin-bottom: 0; }
 #flashBag_popup .fa-close { cursor: pointer; position: absolute; top: 10px; right: 10px; }
 
+#progressBar { margin-bottom: 0px !important; margin-top: 4px; }
+#progressBar .progress-bar span { margin-left: 5px; }
+
+#upload .row { display: none; }
+
 /*# sourceMappingURL=utility.css.map */
