--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile.html.twig
@@ -11,7 +11,7 @@
                         {{-include("UebusaitoBundle::include/upload.html.twig")-}}
                         <label class="control-label required" for="form_user_avatar">Avatar</label>
                         <div class="input-group">
-                            <img class="avatar" src="{{avatar}}" alt="Avatar"/>
+                            <img class="img-thumbnail avatar" src="{{avatar}}" alt="Avatar"/>
                         </div>
                     </div>
                     
