--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -186,7 +186,14 @@
             'deleteAllModules': "{{"index_17"|trans}}",
             'deleteRole': "{{"index_18"|trans}}",
             'deleteAllRoles': "{{"index_19"|trans}}",
-            'deleteLanguageManage': "{{"index_20"|trans}}"
+            'deleteLanguageManage': "{{"index_20"|trans}}",
+            'uploadTextA': "{{"index_21"|trans}}",
+            'uploadTextB': "{{"index_22"|trans}}",
+            'uploadTextC': "{{"index_23"|trans}}",
+            'uploadTextD': "{{"index_24"|trans}}",
+            'uploadButtonA': "{{"index_25"|trans}}",
+            'uploadButtonB': "{{"index_26"|trans}}",
+            'uploadButtonC': "{{"index_27"|trans}}"
         };
         
         var settings = {
