--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/utility.css
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/utility.css
@@ -69,7 +69,11 @@ legend { width: inherit; padding: 0 10px; border-bottom: none; }
 
 .vertical_middle { vertical-align: middle; }
 
+.horizontal_left { text-align: left; }
+
 .horizontal_center { text-align: center; }
+
+.horizontal_right { text-align: right; }
 
 .overflow_hidden { overflow: hidden; }
 
@@ -129,9 +133,13 @@ legend { width: inherit; padding: 0 10px; border-bottom: none; }
 #flashBag_popup ul { margin-bottom: 0; }
 #flashBag_popup .fa-close { cursor: pointer; position: absolute; top: 10px; right: 10px; }
 
-#progressBar { margin-bottom: 0px !important; margin-top: 4px; }
-#progressBar .progress-bar span { margin-left: 5px; }
+#progressBar { margin-bottom: 0px !important; margin-top: 8px; }
+#progressBar .progress-bar span { margin-left: 5px; color: #000000; }
 
-#upload .row { display: none; }
+#upload .container_text { display: none; }
+#upload .container_text .text { position: relative; margin: 10px 0px; padding: 10px; }
+#upload .container_text .text p { margin: 0; }
+#upload .container_text .text .fa-close { cursor: pointer; position: absolute; top: 10px; right: 10px; }
+#upload .container_controls { display: none; }
 
 /*# sourceMappingURL=utility.css.map */
