--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/upload.html.twig
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/upload.html.twig
@@ -1,15 +1,24 @@
 <div id="upload">
     <input class="file" type="file" name="file"/>
-    <div class="text"></div>
+    <div class="row container_text">
+        <div class="col-md-12">
+            <div class="bg-warning text">
+                <i id="upload_text_close" class="fa fa-close"></i>
+                <div>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
-        <div class="col-md-8">
-            {{-include("UebusaitoBundle::include/progressBar.html.twig")-}}
-        </div>
-        <div class="col-md-2">
-            <input class="start" type="button" value="Start"/>
-        </div>
-        <div class="col-md-2">
-            <input class="abort" type="button" value="Abort"/>
+        <div class="container_controls">
+            <div class="col-md-7">
+                {{-include("UebusaitoBundle::include/progressBar.html.twig")-}}
+            </div>
+            <div class="col-md-5 horizontal_right">
+                <p class="btn btn-success button_1"><i class="fa fa-play"></i> <span>{% trans %}upload_1{% endtrans %}</span></p>
+                <p class="btn btn-danger button_2"><i class="fa fa-stop"></i> <span>{% trans %}upload_2{% endtrans %}</span></p>
+            </div>
         </div>
     </div>
 </div>
